[project]
name = "cisco-docs-mcp-server"
version = "0.1.0"
description = "MCP server for accessing Cisco router and device documentation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "PyPDF2>=3.0.0",  # For PDF parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
